[package]
name = "road_render"
version = "0.2.1"
edition = "2021"
authors = ["Ashton Miller"]
description = "Advanced tooling to render roblox files in seconds."
repository = "https://github.com/VernandoGames/roadrender"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
backtrace = "0.3.61"
clap = "3.2.8"
draw = "0.3.0"
env_logger = "0.9.0"
image = "0.24.2"
# imageproc = "0.23.0"
indicatif = "0.16.2"
json = "0.12.4"
log = "0.4.17"
rbx_binary = "0.6.6"
rbx_dom_weak = "2.4.0"
rbx_reflection = "4.2.0"
rbx_reflection_database = "0.2.5"
rbx_types = "1.4.2"
rbx_xml = "0.12.4"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
structopt = "0.3.23"
svg = "0.10.0"
termcolor = "1.1.3"
thiserror = "1.0.31"
tiny-skia = "0.7.0"
